# vertical-slice-plugin-example-python

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  plugin-architecture.md  pyproject.toml
dcb_enrolment_with_vertical_slices/: application.py
docs/: plugin-architecture.md  student-enrollment-vertical-slices.md
docs/features/enrolment/: student_joins_course.feature
kernel/: README.md  pyproject.toml
kernel/course_kernel/: __init__.py
src/course_app/: __init__.py  app.py  main.py  use_cases.py
src/course_app/kernel/: __init__.py  composition.py
src/examples/dcb_enrolment/: interface.py  test_enrolment.py
src/examples/dcb_enrolment_with_vertical_slices/: __init__.py  application.py
tests/: conftest.py
tests/architecture/: test_slice_definition_locations.py
tests/bdd/: conftest.py  test_enrolment_flows.py
tests/bdd/steps/: command_steps.py  query_steps.py
tests/compatibility/: test_enrolment_facade_dispatch.py  test_enrolment_with_vertical_slices.py  test_slice_definition_locations.py
tests/course_app/: test_app.py  test_enrolment_workflow.py  test_use_cases.py
tests/course_app/kernel/: test_composition.py
tests/course_kernel/: test_composition.py
tests/course_slice/: test_course_slice_plugin.py
tests/docs/: test_vertical_slice_taxonomy.py
tests/enrolment_slice/: test_enrolment_slice_plugin.py
tests/state_changes/: test_command_plugins.py
tests/state_views/: test_query_plugins.py
tests/student_slice/: test_student_slice_plugin.py
vertical_slices/: README.md
vertical_slices/automations/: README.md
vertical_slices/course_slice/: pyproject.toml
vertical_slices/course_slice/course_slice/: __init__.py  events.py  plugin.py  slices.py
vertical_slices/courses_events/: README.md  pyproject.toml
vertical_slices/courses_events/courses_events/: events.py
vertical_slices/enrollment_events/: README.md  pyproject.toml
vertical_slices/enrollment_events/enrollment_events/: __init__.py  errors.py  events.py
vertical_slices/enrolment_slice/: pyproject.toml
vertical_slices/enrolment_slice/enrolment_slice/: __init__.py  plugin.py  queries.py  slices.py
vertical_slices/state-changes/: README.md
vertical_slices/state-changes/join_course/: pyproject.toml
vertical_slices/state-changes/join_course/join_course/: slice.py
vertical_slices/state-changes/leave_course/: pyproject.toml
vertical_slices/state-changes/leave_course/leave_course/: __init__.py  slice.py
vertical_slices/state-changes/register_course/: pyproject.toml
vertical_slices/state-changes/register_course/register_course/: slice.py
vertical_slices/state-changes/register_student/: pyproject.toml
vertical_slices/state-changes/register_student/register_student/: __init__.py  slice.py
vertical_slices/state-changes/update_course_name/: pyproject.toml
vertical_slices/state-changes/update_course_name/update_course_name/: slice.py
vertical_slices/state-changes/update_course_places/: pyproject.toml
vertical_slices/state-changes/update_course_places/update_course_places/: plugin.py  slice.py
vertical_slices/state-changes/update_student_max_courses/: pyproject.toml
vertical_slices/state-changes/update_student_max_courses/update_student_max_courses/: slice.py
vertical_slices/state-changes/update_student_name/: pyproject.toml
vertical_slices/state-changes/update_student_name/update_student_name/: plugin.py  slice.py
vertical_slices/state-views/: README.md
vertical_slices/state-views/course_ids_for_student/: pyproject.toml
vertical_slices/state-views/course_ids_for_student/course_ids_for_student/: __init__.py  plugin.py
vertical_slices/state-views/course_names/: pyproject.toml
vertical_slices/state-views/course_names/course_names/: plugin.py
vertical_slices/state-views/course_summary/: pyproject.toml
vertical_slices/state-views/course_summary/course_summary/: __init__.py
vertical_slices/state-views/student_ids_for_course/: pyproject.toml
vertical_slices/state-views/student_ids_for_course/student_ids_for_course/: __init__.py  plugin.py
vertical_slices/state-views/student_names/: pyproject.toml
vertical_slices/state-views/student_summary/: pyproject.toml
vertical_slices/state-views/student_summary/student_summary/: __init__.py  plugin.py  view.py
vertical_slices/state_changes/: README.md
vertical_slices/state_changes/join_course/: README.md  join_course.feature  pyproject.toml
vertical_slices/state_changes/leave_course/: README.md  leave_course.feature  pyproject.toml
vertical_slices/state_changes/register_course/: README.md  pyproject.toml  register_course.feature
vertical_slices/state_changes/register_student/: README.md  pyproject.toml  register_student.feature
vertical_slices/state_changes/update_course_name/: README.md  pyproject.toml  update_course_name.feature
vertical_slices/state_changes/update_course_places/: README.md  pyproject.toml  update_course_places.feature
vertical_slices/state_changes/update_student_max_courses/: README.md  pyproject.toml  update_student_max_courses.feature
vertical_slices/state_changes/update_student_name/: README.md  pyproject.toml  update_student_name.feature
vertical_slices/state_views/: README.md
vertical_slices/state_views/course_ids_for_student/: README.md  course_ids_for_student.feature  pyproject.toml
vertical_slices/state_views/course_names/: README.md  course_names.feature  pyproject.toml
vertical_slices/state_views/course_summary/: README.md  course_summary.feature  pyproject.toml
vertical_slices/state_views/student_ids_for_course/: README.md  pyproject.toml  student_ids_for_course.feature
vertical_slices/state_views/student_names/: README.md  pyproject.toml  student_names.feature
vertical_slices/state_views/student_summary/: README.md  pyproject.toml  student_summary.feature
vertical_slices/student_events/: README.md  pyproject.toml
vertical_slices/student_events/student_events/: events.py
vertical_slices/student_slice/: pyproject.toml
vertical_slices/student_slice/student_slice/: __init__.py  events.py  plugin.py  slices.py
(+45 files in other folders)
